# inference_results_v3.0

./: README.md  script.sh  script_quick.sh  values.yaml
closed/Dell/code/rnnt/pytorch-cpu/: CMakeLists.txt  calib_model.sh  eval_accuracy.py  eval_model.sh  prepare_conda_env.sh  prepare_env.sh  run.sh  save_model.sh
closed/Dell/code/rnnt/pytorch-cpu/configs/: calibration_files.txt  librispeech-inference.csv  rnnt.toml
closed/Dell/code/rnnt/pytorch-cpu/csrc/: concurrentqueue.h  hw_topology.hpp  lightweightsemaphore.h  main.cpp  metadata.cpp  metadata.hpp  rnnt_model.hpp  rnnt_processor.hpp  rnnt_qsl.cpp  rnnt_qsl.hpp  torch_sut.cpp  torch_sut.hpp  utils.cpp  utils.hpp
closed/Dell/code/rnnt/pytorch-cpu/datasets/: convert_librispeech.py  dataset.py  download_librispeech.py  process_librispeech.py
closed/Dell/code/rnnt/pytorch-cpu/datasets/parts/: features.py  manifest.py  segment.py
closed/Dell/code/rnnt/pytorch-cpu/docker/: Dockerfile  build_rnnt-99_container.sh
closed/Dell/code/rnnt/pytorch-cpu/mlperf_plugins/: CMakeLists.txt  _C.py  __init__.py
closed/Dell/code/rnnt/pytorch-cpu/mlperf_plugins/csrc/: activation.cpp  activation.hpp  amx_linear.cpp  amx_linear.hpp  amx_mha.cpp  amx_mha.hpp  amx_mha_concat.cpp  cpu.hpp  dnnl_ext.hpp  el_intrin.hpp  frame_splicing.cpp  frame_splicing.hpp  greedy_decode_update.cpp  greedy_decode_update.hpp  init.cpp  linear.cpp  lru_cache.hpp  lstm.cpp  lstm.hpp  lstm_amx.cpp  lstm_amx.hpp  lstm_postop.cpp  lstm_postop.hpp  normalization.cpp  normalization.hpp  power_spectrum.cpp  power_spectrum.hpp  preemphasis.cpp  preemphasis.hpp  softmax.cpp  stack_time.cpp  stack_time.hpp
closed/Dell/code/rnnt/pytorch-cpu/mlperf_plugins/include/: plugins.hpp
closed/Dell/code/rnnt/pytorch-cpu/models/: _C.py  arguments.py  config.py  decoder.py  main.py  modeling_rnnt.py  pytorch_sut.py  quant_linear.py  quant_lstm.py  quant_modules.py  rnnt_qsl.py  utils.py
closed/Dell/code/rnnt/pytorch-cpu/patches/: clang_mkl_dnn.patch  pytorch_official_1_12.patch
closed/GIGABYTE/docker/: Dockerfile.aarch64  Dockerfile.orin  pyproject.toml  requirements.x86_64.2.txt
closed/HPE/code/dlrm-99/pytorch-cpu/src/: CMakeLists.txt  prepare_conda_env.sh
closed/HPE/code/dlrm-99/pytorch-cpu/src/harness/: bin.hpp  dlrm_proc.cpp  qsl.hpp  (+6 more)
closed/HPE/code/resnet50/pytorch-cpu/src/: CMakeLists.txt  dataset_utils.cpp
closed/Intel/calibration/bert-99/pytorch-cpu/mlperf_plugins/: CMakeLists.txt  fakequant_modules.py  quant_modules.py
closed/Intel/code/bert-99/pytorch-cpu/: CMakeLists.txt
closed/Intel/code/bert-99/pytorch-cpu/csrc/: bert_model.cpp  bert_qsl.hpp  torch_sut.cpp
closed/Intel/code/bert-99/pytorch-cpu/models/: modeling_bert.py  modeling_bert_precomp.py  modeling_half_bert.py  save_bert_inference.py  save_pytorch_dynamic_quant_bert.py
closed/Intel/code/bert-99/pytorch-cpu/patches/: clang_mkl_dnn.patch
closed/Intel/code/retinanet/pytorch-cpu/src/: CMakeLists.txt  dataset_utils.cpp  mlperf_runner.cpp
closed/Neuchips/code/harness/: CMakeLists.txt
closed/Neuchips/code/harness/common/: harness_flags.hpp  logger.cpp  utils.hpp
closed/Neuchips/code/harness/harness_dlrm_n3000/: batch_maker.cpp  batch_maker.hpp  config.h  dlrm_qsl.hpp  dlrm_server.cc  dlrm_server.h  main_dlrm.cc  neuchips_user.h
closed/Neuchips/code/harness/lwis/include/: NeuchipsInfer.h  logger.h  logging.h  lwis_buffers.h  numpy.hpp  qsl.hpp
closed/SiMa/code/resnet50/palette/src/: CMakeLists.txt  README.md  check_accuracy.sh
closed/rebellions/code/: CMakeLists.txt  internal_code.info  main.cpp
closed/rebellions/code/bert-99/: README.md
closed/rebellions/code/cmake/: argparse.cmake  loadgen.cmake
closed/rebellions/code/include/: postprocessor.hpp  rebel_qsl.hpp  rebel_sut.hpp
closed/rebellions/code/resnet50/: README.md
closed/rebellions/code/scripts/: imagenet.py  prepare_dataset.py  prepare_model.py  preprocess_dataset.py  squad.py
closed/rebellions/code/scripts/calibration/bert/: quantization.py
closed/rebellions/code/scripts/calibration/resnet/: dataset.py  quantization.py
closed/rebellions/code/src/: postprocessor.cpp  rebel_qsl.cpp  rebel_sut.cpp
network/NVIDIA/code/harness/: CMakeLists.txt
network/NVIDIA/code/harness/common/: callback.hpp  common.hpp  harness_net_flags.hpp  logger.h  logging.h  lwis_buffers.h  qdl_lon.cpp  qdl_lon.hpp  qsl_lon.hpp  utils.hpp
network/NVIDIA/code/harness/harness_bert_lon/: bert_lon_common.h  bert_lon_core_vs.cc  bert_lon_core_vs.h  bert_lon_server.cc  bert_lon_server.h  harness_bert_flags.hpp  main_bert_lon.cc  main_bert_sut.cc  qdl_intf_bert.cpp  qdl_intf_bert.hpp
network/NVIDIA/code/harness/harness_lwis_lon/: harness_lwis_flags.hpp  lwis_lon.cpp  lwis_lon.hpp  main_lwis_lon.cc  main_lwis_sut.cc  qdl_intf_lwis.cpp  qdl_intf_lwis.hpp
network/NVIDIA/code/harness/lon_lib/: CMakeLists.txt
network/NVIDIA/code/harness/lon_lib/include/: lon_ib.hpp
network/NVIDIA/code/harness/lon_lib/src/: lon_ib.cpp
open/Moffett/code/harness/: CMakeLists.txt
open/Moffett/code/harness/common/: harness_flags.hpp  syncqueue.h  utils.hpp
open/Moffett/code/harness/harness_default/: main_default.cpp
open/Moffett/code/harness/spu_backend/include/: mf_sola.h  samples_loader.h  timer.h
open/Moffett/code/harness/spu_backend/src/: mf_sola.cpp  multithreading.cpp
open/Supermicro/code/harness/: CMakeLists.txt
open/Supermicro/code/harness/common/: common.h  logger.cpp
open/Supermicro/code/harness/harness_bert/: bert_server.h
open/Supermicro/code/harness/harness_rnnt/: CudaGraphCache.hpp
open/Supermicro/code/harness/harness_triton/: main_server.cc
open/Supermicro/code/harness/harness_triton/include/: dla_triton_frontend_helpers.hpp
open/Supermicro/code/harness/harness_triton/src/: triton_concurrent_frontend.cpp
open/Supermicro/code/harness/harness_triton_inferentia/include/: triton_concurrent_frontend.hpp
open/Supermicro/code/harness/spu_backend/: CMakeLists.txt
open/Supermicro/code/harness/spu_backend/include/: model_executor.h  numa.h
open/Supermicro/code/harness/spu_backend/src/: model_executor.cpp  numa.cpp  server.cpp
(+37592 files in other folders)
