[tool.poetry]
name = "MLPerf-Inference"
version = "0.1.0"
description = ""
authors = ["MLPerf-Inference"]

[tool.poetry.dependencies]
python = "^3.8"
absl-py = "0.12.0"
appdirs = "1.4.4"
astunparse = "1.6.3"
attrs = "21.2.0"
audioread = "2.1.9"
beautifulsoup4 = "4.9.3"
boto3 = "1.17.76"
botocore = "1.20.76"
bs4 = "0.0.1"
cachetools = "4.2.2"
certifi = "2020.12.5"
cffi = "1.14.5"
chardet = "4.0.0"
click = "8.0.1"
cmake = "3.18.4"
cycler = "0.10.0"
Cython = "0.29.23"
decorator = "4.4.2"
distlib = "0.3.1"
et-xmlfile = "1.1.0"
filelock = "3.0.12"
flatbuffers = "1.12"
future = "0.18.2"
google-auth = "1.30.0"
google-auth-oauthlib = "0.4.4"
google-pasta = "0.2.0"
grpcio = "1.34.1"
huggingface-hub = "0.0.8"
idna = "2.10"
inflect = "4.1.0"
iniconfig = "1.1.1"
jdcal = "1.4.1"
jmespath = "0.10.0"
joblib = "1.0.1"
keras-nightly = "2.5.0.dev2021032900"
kiwisolver = "1.3.1"
linecache2 = "1.0.0"
Mako = "1.2.2"
Markdown = "3.3.4"
MarkupSafe = "2.1.1"
networkx = "2.5.1"
numpy = "1.22.3"
nvidia-pyindex = "1.0.8"
oauthlib = "3.1.0"
onnx = "1.11.0"
onnxruntime-gpu = "1.11.0"
opencv-python-headless = "4.5.2.52"
openpyxl = "3.0.4"
opt-einsum = "3.3.0"
packaging = "20.9"
pandas = "1.2.4"
Pillow = "9.3.0"
pluggy = "0.13.1"
pooch = "1.3.0"
protobuf = "3.20.2"
py = "1.11.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.20"
pycuda = "2021.1"
pydicom = "2.1.2"
Pygments = "2.13.0"
pyparsing = "2.4.7"
pytest = "6.2.4"
python-dateutil = "2.8.1"
pytools = "2021.2.6"
pytz = "2021.1"
PyVISA = "1.11.3"
PyVISA-py = "0.5.2"
PyWavelets = "1.1.1"
PyYAML = "5.4.1"
regex = "2021.4.4"
requests = "2.25.1"
requests-oauthlib = "1.3.0"
resampy = "0.2.2"
rsa = "4.7.2"
s3transfer = "0.4.2"
sacremoses = "0.0.45"
scikit-image = "0.18.1"
scikit-learn = "0.22.2.post1"
sentencepiece = "0.1.95"
SimpleITK = "2.0.2"
six = "1.15.0"
sklearn = "0.0"
soundfile = "0.10.3.post1"
soupsieve = "2.2.1"
sox = "1.4.0"
termcolor = "1.1.0"
threadpoolctl = "2.1.0"
tifffile = "2021.4.8"
tokenizers = "0.10.2"
toml = "0.10.1"
torch = {url = "https://download.pytorch.org/whl/cu111/torch-1.10.0%2Bcu111-cp38-cp38-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu111/torchvision-0.11.0%2Bcu111-cp38-cp38-linux_x86_64.whl"}
tqdm = "4.60.0"
traceback2 = "1.4.0"
transformers = "4.6.0"
typing-extensions = "3.7.4.3"
Unidecode = "1.1.1"
unittest2 = "1.1.0"
urllib3 = "1.26.10"
virtualenv = "20.4.6"
Werkzeug = "2.2.2"
polygraphy = {url = "https://developer.download.nvidia.com/compute/redist/polygraphy/polygraphy-0.35.2-py2.py3-none-any.whl"}
pycocotools = "2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
